# roguelike-rs

./: .gitignore  Cargo.toml  TODO.md
src/: game.rs  main.rs  ui.rs  view.rs
src/game/: command.rs  controller.rs  handle_input.rs  mod.rs
src/game/controller/: mod.rs  tests.rs
src/game/handle_input/: character.rs  command.rs  inventory.rs  mod.rs
src/game/handle_input/story/: encounter.rs  mod.rs  treasure.rs
src/game/render/: character.rs  game_info.rs  help.rs  inventory.rs  map.rs  mod.rs  story.rs  title_screen.rs
src/game/scenes/: combat_scene.rs  game_scene.rs  mod.rs
src/game/scenes/game_scene/: content.rs  mod.rs  story_option.rs  story_state.rs
src/render/: character.rs  game.rs  game_info.rs  inventory.rs  map.rs  mod.rs  story.rs
src/scenes/: combat_scene.rs  mod.rs
