[package]
name = "roguelike-rs"
version = "0.1.0"
authors = ["Henri Lunnikivi <henri.lunnikivi@gmail.com>"]

[dependencies]
rpglib = { path = "../rpglib-rs" }
#rpglib = { git = "https://github.com/hegza/rpglib-rs" }
tui = "*"
gag = "*"
textwrap = { version = "0.7" }
try_from = "*"
lazy_static = "*"
range = "*"
rand = "*"
Inflector = "*"
